fix height issues on mobile

--- a/src/styles/LandingPage.module.css
+++ b/src/styles/LandingPage.module.css
@@ -1,14 +1,3 @@
-.container {
-    width: 100%;
-    height: 100vh;
-    background-image: url("/images/Pattern.jpg");
-    background-position: center;
-    background-size: cover;
-    display: flex;
-    align-items: flex-end;
-
-}
-
 .content {
     display: flex;
     width: 100%;
@@ -79,12 +68,6 @@
 }
 
 @media (max-width: 1200px) {
-    .container {
-        display: flex;
-        flex-direction: column;
-
-    }
-
     .content {
         display: flex;
         flex-direction: column;
